--- a/css/style.css
+++ b/css/style.css
@@ -2,23 +2,30 @@
 *{
     font-family:'Roboto', sans-serif ;
 }
+body {
+    margin: 0;
+    padding: 0;
+}
 .bardiscound{
     background-color: #1CD1B0;
     width: 100%;
     height: 30px;
     line-height: 1.7;
     padding-left: 20px;
-    position: absolute;
     top: 0;
     left: 0;
     box-sizing: border-box;
 }
+header {
+    position: sticky;
+    top: 0;
+    z-index: 1000;
+    width: 100%;
+}
 h1{
     background-color: #00669F;
     box-shadow:0px 10px 7px rgba(0, 0, 0, 0.25);
-    position: absolute;
-    top: 9px;
-    left: 0; 
+    margin: 0;
     width: 100%;
     box-sizing: border-box;
     height: 101px;
