--- a/css/style.css
+++ b/css/style.css
@@ -1,121 +1,147 @@
 @import url('https://fonts.googleapis.com/css2?family=Arimo:ital@1&family=Roboto:wght@300&display=swap');
-*{
-    font-family:'Roboto', sans-serif ;
+
+* {
+    font-family: 'Roboto', sans-serif;
 }
+
 body {
     margin: 0;
     padding: 0;
 }
-.bardiscound{
-    background-color: #1CD1B0;
+
+.bardiscound {
+    background-color: #D1891C;
     width: 100%;
     height: 30px;
     line-height: 1.7;
     padding-left: 20px;
-    top: 0;
-    left: 0;
+    display: flex;
+    justify-content: flex-start;
     box-sizing: border-box;
+    font-weight: 700;
 }
+
 header {
     position: sticky;
     top: 0;
     z-index: 1000;
     width: 100%;
 }
-h1{
+
+h1 {
     background-color: #00669F;
-    box-shadow:0px 10px 7px rgba(0, 0, 0, 0.25);
+    box-shadow: 0px 10px 7px rgba(0, 0, 0, 0.25);
     margin: 0;
     width: 100%;
     box-sizing: border-box;
-    height: 101px;
-    padding: 30px 0px 10px 20px;
+    line-height: 3;
+    padding-left: 10px;
+    color: white;
 }
 
-main{
-    position: relative;
-    top: 300px;
-    left: 0;
-    width: 100%;
-    height: 710px;
-}
-.box1{
-    width: 300px;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-    position: absolute;
-    top: 0;
-    left: 32px;
-    background-image: url(../img/baticueba.png);
-    background-repeat: no-repeat;
+.caja {
+    display: inline-flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-around;
+    width: 95vw;
+    margin-top: 5%;
+    margin-bottom: 5%;
+    flex-wrap: wrap;
     box-sizing: border-box;
-    padding: 10px 30px 30px 30px;
-    border-radius: 10px;
-    height: 555px;
-    background-color: #f3f3f3;
+    position: relative;
+    left: 2vw;
 }
-.box2{
+
+.box {
     width: 300px;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-    position: absolute;
-    top: 0;
-    left: 360px;
+    padding: 0;
+    display: flex;
+    flex-direction: column;
+    background-color: #f3f3f3;
+    border-radius: 10px;
+    height: 650px;
+    margin:20px
+}
+
+.box .top {
+    padding: 15px;
+    box-sizing: border-box;
+    width: 100%;
+    height: 200px;
+    border-radius: 10px;
+}
+
+.img1 {
+    background-image: url(../img/baticueba.png);
+    background-repeat: round;
+    background-size: contain;
+}
+
+.img2 {
+    background-image: url(../img/fondo\ marabilla.png);
+    background-repeat: no-repeat;
+    background-size: contain;
+}
+
+.img3 {
+    background-image: url(../img/tierra.png);
+    background-repeat: no-repeat;
+    background-size: contain;
+}
+
+.img4 {
     background-image: url(../img/explosion.png);
     background-repeat: no-repeat;
-    box-sizing: border-box;
-    padding: 10px 30px 30px 30px;
-    border-radius: 10px;
-    height: 555px;
-    background-color: #f3f3f3;
+    background-size: contain;
+
 }
-.box3{
-    width: 300px;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-    position: absolute;
-    top: 0;
-    left: 696px;
-    background-image:url(../img/baticueba.png);
-    background-repeat: no-repeat;
-    box-sizing: border-box;
-    padding: 10px 30px 30px 30px;
-    border-radius: 10px;
-    height: 555px;
-    background-color: #f3f3f3;
-}
-h2{
+
+.recuadro {
+    padding: 2rem;
+    margin-top: -95px;
     text-align: center;
-}
-.top{
     position: relative;
-    top: 0;
 }
-.recuadro{
-    position: relative;
-    top: 90px;
+
+.recuadro p {
+    text-align: start;
 }
-.recuadro img{
-    position:relative;
-    left: 60px;
+
+.recuadro img {
     border-radius: 50%;
+    width: 120px;
 }
-button{
-    position: relative;
-    left: 60px;
-    background: #00669F;
+
+h2 {
+    text-transform: uppercase;
+}
+
+button {
+    background-color: #00669F;
+    border: 0;
+    border-radius: 5px;
+    width: 100px;
     height: 50px;
-    width: 130px;
-    border:0;
+    margin-top: 15px;
+}
+
+button a {
+    text-decoration: none;
     color: white;
 }
 footer{
-    position: absolute;
-    bottom: 0;
-    background: #00669F;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-    width: 100%;
-    box-sizing: border-box;
-    left: 0;
-    height: 50px;
-    line-height: 3;
+    background-color: #00669F;
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+    align-items: center;
+}
+footer p{
     color: white;
-    padding-left: 20px;
+    line-height: 2;
+}
+footer img{
+    width: 150px;
+
 }
