--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,28 @@ body {
     margin: 0;
     padding: 0;
 }
+.add{
+    border-radius: 50%;
+    width: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: row;
+    position: fixed;
+    right: 10px;
+    top:45%;
+    font-size: 35px;
+    font-weight: 700;
+    z-index: 400;
+    margin: 0;
+}
+@media (max-width:480px){
+    .add{
+        position: fixed;
+        bottom: 1vh;
+        right: 1vw;
+    }
+}
 
 .bardiscound {
     background-color: #D1891C;
@@ -99,7 +121,7 @@ h1 {
 
 .recuadro {
     padding: 2rem;
-    margin-top: -95px;
+    
     text-align: center;
     position: relative;
 }
@@ -111,6 +133,7 @@ h1 {
 .recuadro img {
     border-radius: 50%;
     width: 120px;
+    margin-top: -150px;
 }
 
 h2 {
