--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Arimo:ital@1&family=Roboto:wght@300&display=swap');
 
+/*estilo general*/
+:root {
+    --color-principal: #00669F;
+    --color-font: #fff9f9;
+}
+
 * {
     font-family: 'Roboto', sans-serif;
 }
@@ -8,169 +14,190 @@ body {
     margin: 0;
     padding: 0;
 }
-.add{
-    border-radius: 50%;
-    width: 50px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: row;
-    position: fixed;
-    right: 10px;
-    top:45%;
-    font-size: 35px;
-    font-weight: 700;
-    z-index: 400;
-    margin: 0;
-}
-@media (min-width:481px) and (max-width:768px){
-    .add{
-        position: fixed;
-        top: 70vh;
-        right: 1vw;
-    }
-}
-@media (min-width:0px) and (max-width:480px){
-    .add{
-        top: 70vh;
-        right: 1vw;
-    }    
+
+a {
+    color: var(--color-font);
+    text-decoration: none;
 }
 
-.bardiscound {
-    background-color: #D1891C;
-    width: 100%;
-    height: 30px;
-    line-height: 1.7;
-    padding-left: 20px;
-    display: flex;
-    justify-content: flex-start;
-    box-sizing: border-box;
-    font-weight: 700;
-}
-
+/*header*/
 header {
+    width: 100%;
+}
+
+.desc {
+    background-color: #D1891C;
+    margin: 0;
+    padding: 8px;
+    color: var(--color-font);
+    font-size: 20px;
+    box-sizing: border-box;
+}
+
+.sticky {
+    background-color: var(--color-principal);
+    margin: 0;
     position: sticky;
     top: 0;
-    z-index: 1000;
-    width: 100%;
-}
-
-h1 {
-    background-color: #00669F;
+    box-sizing: border-box;
     box-shadow: 0px 10px 7px rgba(0, 0, 0, 0.25);
+    height: 100px;
+    padding: 30px;
+    color: var(--color-font);
+}
+
+.title {
     margin: 0;
-    width: 100%;
-    box-sizing: border-box;
-    line-height: 3;
-    padding-left: 10px;
-    color: white;
-}
-
-.caja {
-    display: inline-flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-around;
-    width: 95vw;
-    margin-top: 5%;
-    margin-bottom: 5%;
-    flex-wrap: wrap;
-    box-sizing: border-box;
-    position: relative;
-    left: 2vw;
-}
-
-.box {
-    width: 300px;
-    padding: 0;
-    display: flex;
-    flex-direction: column;
-    background-color: #f3f3f3;
-    border-radius: 10px;
-    height: 650px;
-    margin:20px
-}
-
-.box .top {
-    padding: 15px;
-    box-sizing: border-box;
-    width: 100%;
-    height: 200px;
-    border-radius: 10px;
-}
-
-.img1 {
-    background-image: url(../img/baticueba.png);
-    background-repeat: round;
-    background-size: contain;
-}
-
-.img2 {
-    background-image: url(../img/fondo\ marabilla.png);
-    background-repeat: no-repeat;
-    background-size: contain;
-}
-
-.img3 {
-    background-image: url(../img/tierra.png);
-    background-repeat: no-repeat;
-    background-size: contain;
-}
-
-.img4 {
-    background-image: url(../img/explosion.png);
-    background-repeat: no-repeat;
-    background-size: contain;
-
-}
-
-.recuadro {
-    padding: 2rem;
-    
-    text-align: center;
-    position: relative;
-}
-
-.recuadro p {
-    text-align: start;
-}
-
-.recuadro img {
-    border-radius: 50%;
-    width: 120px;
-    margin-top: -150px;
-}
-
-h2 {
     text-transform: uppercase;
 }
 
-button {
-    background-color: #00669F;
-    border: 0;
-    border-radius: 5px;
-    width: 100px;
-    height: 50px;
-    margin-top: 15px;
+.paginas {
+    background-color: #001D2D;
+    margin: 0;
+    display: flex;
+    justify-content: flex-end;
+    box-sizing: border-box;
+    padding: 5px;
 }
 
-button a {
-    text-decoration: none;
-    color: white;
+.enlaces {
+    list-style: none;
+    display: grid;
+    grid-template-columns: 37% 37% 25%;
+    width: 300px;
+    text-align: center;
 }
-footer{
-    background-color: #00669F;
+
+.enlaces__log{
+    width: 200px;
+    list-style: none;
+}
+
+/*cartas*/
+.contenedor{
     display: flex;
     justify-content: space-around;
+    align-items: flex-start;
     flex-wrap: wrap;
-    align-items: center;
+    padding: 2em;
 }
-footer p{
-    color: white;
-    line-height: 2;
+
+.card{
+    min-width: 310px;
+    max-width: 350px;
+    height: 630px;
+    border-radius: 10px;
+    box-sizing: border-box;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    margin: 10px;
+    position: relative;
+}
+
+.icono{
+    height: 200px;
+    display: flex;
+    justify-content: flex-start;
+    align-items: flex-start;
+    padding: 15px;
+    margin: 0;
+    box-sizing: border-box;
+    background-size: cover;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+}
+
+.uno{
+    background-image: url(../img/baticueba.png);
+}
+.dos{
+    background-image: url(../img/fondo\ marabilla.png);
+}
+
+.tres{
+    background-image: url(../img/tierra.png);
+}
+
+.cuatro{
+    background-image: url(../img/explosion.png);
+}
+
+
+.rostro img{
+    width: 120px;
+    border-radius: 50%;
+}
+.rostro{
+    display: flex;
+    justify-content: center;
+    margin-top: -60px;
+}
+.info{
+    margin-top: 20px;
+    text-align: center;
+
+}
+.info span{
+    font-weight: 700;
+    text-transform: uppercase;
+    font-size: 25px;
+}
+.info p{
+    text-align:justify;
+    padding: 0px 25px;
+}
+
+.mas{
+    display: flex;
+    justify-content: center;
+    position: absolute;
+    bottom: 5%;
+    left: 30%;
+}
+
+.mas button{
+    background-color: var(--color-principal);
+    border-radius: 10px;
+    border: 0;
+    width: 100px;
+    height: 50px;
+    box-sizing: border-box;
+    margin: 15px;
+}
+
+/*footer*/
+footer{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: var(--color-principal);
+    color: var(--color-font);
+    box-sizing: border-box;
+    padding: 20px;
+    flex-wrap: wrap;
 }
 footer img{
     width: 150px;
-
+    margin: 10px;
 }
+.derechos span{
+    text-transform: uppercase;
+}
+/*button add*/
+.add{
+    z-index: 20;
+    position: fixed;
+    right: 3%;
+    top: 47%;
+    background-color: var(--color-principal);
+    border-radius: 50%;
+    width: 50px;
+    height: 50px;
+    border: 0;
+    color: var(--color-font);
+    font-size: 40px;
+    font-weight: 700;
+}
+
+@media (min-width:481px) and (max-width:768px) {}
+
+@media (min-width:0px) and (max-width:480px) {}
